cmake_minimum_required(VERSION 3.26)
project(LeetCode-C C)

set(CMAKE_C_STANDARD 11)

add_executable(1-doubleLoop 1-doubleLoop.c)
add_executable(1-hashTable 1-hashTable.c)
add_executable(3 3.c)
add_executable(4 4.c)
add_executable(5 5.c)
add_executable(6 6.c)
add_executable(7 7.c)
add_executable(8 8.c)
add_executable(9 9.c)
add_executable(11 11.c)
add_executable(14 14.c)
add_executable(15 15.c)
add_executable(16 16.c)
add_executable(274 274.c)
add_executable(test test.c)